--- a/hw1/Check_applicability.ipynb
+++ b/hw1/Check_applicability.ipynb
@@ -58,8 +58,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\sum_{i=1}^n (x_i - a)^2 \\to \\min\\limits_{a} \\Leftrightarrow -2\\sum_{i=1}^n (x_i - a) = 0 \\Rightarrow \\xi(x_i - a) = 1 \\Rightarrow$$\n",
-    "\n",
+    "$$\\sum_{i=1}^n (x_i - a)^2 \\to \\min\\limits_{a} \\Leftrightarrow -2\\sum_{i=1}^n (x_i - a) = 0 \\Rightarrow \\xi(x_i - a) = 1 \\Rightarrow$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$ a  = \\dfrac{\\sum_{i=1}^n x_i}{\\sum_{i=1}^n 1} = mean(\\{x_i\\}_{i=1}^n)$$\n",
     "Результат совпадает с честым решением задачи оптимизации"
    ]
@@ -731,10 +736,20 @@
    "metadata": {},
    "source": [
     "Найдем оптимальную точку оптимизируемой функции вида:\n",
-    "$$f(b, a) = (b - a)^4 + (-b - a)^4 \\to \\min\\limits_{a}$$\n",
-    "\n",
-    "$$f(b, a) = (b^2 + a^2 - 2ab)^2 + (b^2 + a^2 + 2ab)^2 = 2(b^2 + a^2)^2 + 8a^2b^2 - 4ab(a^2 + b^2) + 2ab(a^2 + b^2) = 2b^4 + 2a^4 + 12a^2b^2 \\to \\min\\limits_{a} \\Rightarrow$$\n",
-    "\n",
+    "$$f(b, a) = (b - a)^4 + (-b - a)^4 \\to \\min\\limits_{a}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$f(b, a) = (b^2 + a^2 - 2ab)^2 + (b^2 + a^2 + 2ab)^2 = 2(b^2 + a^2)^2 + 8a^2b^2 - 4ab(a^2 + b^2) + 2ab(a^2 + b^2) = 2b^4 + 2a^4 + 12a^2b^2 \\to \\min\\limits_{a} \\Rightarrow$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "$$a = 0$$"
    ]
   },
@@ -742,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Как мы видим выше, оптимальная точка была найдена только в одном случае -- при инициализации $а = 0$, в остальных случаях выдаваемые итерационной формулой оптимальные $a$ чередуются: $100, -100...$\n",
+    "Как мы видим выше, оптимальная точка была найдена только в одном случае -- при инициализации $a = 0$, в остальных случаях выдаваемые итерационной формулой оптимальные $a$ чередуются: $100, -100...$\n",
     "\n",
     "Посмотрим, как поведет себя формула, елси проинициализировать $a$ рядом с $0$:"
    ]
